Fix date in footer. Hide work history dates on mobile. Update home title.

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -93,6 +93,7 @@
   .role {
     width: 100%;
     color: onBackground(0.7);
+    overflow: hidden;
     
     .project {
       color: onBackground(0.4);
@@ -107,5 +108,9 @@
     // background-color: onBackground(0.05);
     // padding: 0 0.25rem;
     border-radius: 0.2rem;
+
+    @media (max-width: 481px) {
+      display: none;
+    }
   }
 }
